[gd_scene load_steps=25 format=3 uid="uid://df7mwyiq1vofg"]

[ext_resource type="Texture2D" uid="uid://c4u0ducc056lg" path="res://Assets/Sprites/student/jump/spritesheet (1).png" id="1_tc3u4"]
[ext_resource type="Script" path="res://Scenes/player_1.gd" id="1_woxh2"]
[ext_resource type="Texture2D" uid="uid://dpvd8steqrs01" path="res://Assets/Sprites/student/maLE pUNCH/spritesheet (2).png" id="2_8hshh"]
[ext_resource type="Texture2D" uid="uid://bfnd1maqgc4vv" path="res://Assets/Sprites/student/run/spritesheet.png" id="3_tujhb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wbc3r"]
atlas = ExtResource("1_tc3u4")
region = Rect2(68, 38, 34, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l7f1"]
atlas = ExtResource("1_tc3u4")
region = Rect2(0, 0, 34, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnyph"]
atlas = ExtResource("1_tc3u4")
region = Rect2(34, 0, 34, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4p62"]
atlas = ExtResource("1_tc3u4")
region = Rect2(68, 0, 34, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu18g"]
atlas = ExtResource("2_8hshh")
region = Rect2(0, 0, 51, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_yemy8"]
atlas = ExtResource("2_8hshh")
region = Rect2(51, 0, 51, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_ch6rr"]
atlas = ExtResource("2_8hshh")
region = Rect2(0, 35, 51, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k43i"]
atlas = ExtResource("2_8hshh")
region = Rect2(51, 35, 51, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2x0j"]
atlas = ExtResource("2_8hshh")
region = Rect2(0, 70, 51, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_75q0c"]
atlas = ExtResource("3_tujhb")
region = Rect2(0, 0, 34, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_mled8"]
atlas = ExtResource("3_tujhb")
region = Rect2(34, 0, 34, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0kcb"]
atlas = ExtResource("3_tujhb")
region = Rect2(68, 0, 34, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb7qj"]
atlas = ExtResource("3_tujhb")
region = Rect2(0, 37, 34, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge54j"]
atlas = ExtResource("3_tujhb")
region = Rect2(34, 37, 34, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6ksg"]
atlas = ExtResource("3_tujhb")
region = Rect2(68, 37, 34, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_1atoj"]
atlas = ExtResource("3_tujhb")
region = Rect2(0, 74, 34, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaoyc"]
atlas = ExtResource("3_tujhb")
region = Rect2(34, 74, 34, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_yjw8a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbc3r")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l7f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnyph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4p62")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu18g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yemy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch6rr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k43i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2x0j")
}],
"loop": true,
"name": &"punch",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75q0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mled8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0kcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb7qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge54j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6ksg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1atoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaoyc")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qw0g6"]
size = Vector2(54, 100)

[sub_resource type="CircleShape2D" id="CircleShape2D_trc5k"]
radius = 58.0345

[node name="player1" type="CharacterBody2D"]
position = Vector2(-39, -2)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_woxh2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(53, -62)
scale = Vector2(4.2353, 4.23684)
sprite_frames = SubResource("SpriteFrames_yjw8a")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 5
position = Vector2(54, -39)
shape = SubResource("RectangleShape2D_qw0g6")

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(56, -39)
shape = SubResource("CircleShape2D_trc5k")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="respawn" type="Timer" parent="."]

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="respawn" to="." method="_on_respawn_timeout"]
